--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(120deg, #a7405f 70%, #972d0f 30%);
+  background-image: linear-gradient(120deg, #a7405f 70%, #bd5134 30%);
   color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
@@ -19,13 +19,14 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
+  color:#ca8f7f;
 }
 form input,
 form button {
   padding: 0.5rem;
   font-size: 2rem;
   border: none;
-  background: #ac4d33;
+  background: #f7fffe;
 }
 form button {
   color: #ff6f47;
@@ -52,7 +53,7 @@ form button:hover {
   margin: 0.5rem;
   background: white;
   font-size: 1.5rem;
-  color: rgb(31, 8, 8);
+  color: rgb(134, 73, 73);
   display: flex;
   justify-content: space-between;
   align-items: center;
